--- a/app/views/books/index_m.html.erb
+++ b/app/views/books/index_m.html.erb
@@ -1,30 +1,40 @@
-<% provide(:title, (t 'app_name')) %>
+<% provide(:title) %>
 
 <div id="top" data-role="content" data-theme="a">
-	<a href="#home" id="pagetop" data-ajax="false" class="ui-btn ui-btn-icon-notext ui-icon-caret-up">ページ先頭へ戻る</a>
+	<%= link_to (t 'pagetop'), "#home", :id => "pagetop", :class => "ui-btn ui-btn-icon-left ui-icon-caret-up", "data-ajax" => "false" %>
+
+	<% unless @search_string.nil? %>
+		<div class="search_result">
+			<%= @result %> <%= link_to((t 'search.back'),root_path(view: "m")) %>
+		</div>
+	<% end %>
+
+	<%= form_tag(books_search_path, method: "get", id: "search_form") do %>
+		<%= hidden_field_tag "view", "m" %>
+		<input type="search" id="search" name="search_string" value="<%= @search_string %>" placeholder=<%= t 'search.placeholder' %> maxlength=50 />
+		<%= submit_tag (t 'button.search'), :id => "search_button", :name => nil, :class => "ui-btn ui-corner-all ui-shadow ui-disabled", "data-role" => "none" %>
+	<% end %>
 
 	<div data-role="fieldcontain">
 	<fieldset data-role="controlgroup" id="books_controlgroup">
-	<ul id="books_index" class="ui-listview" data-filter=true data-role="listview">
-	<% Book.all.each do |book| %>
+	<ul id="books_index" class="ui-listview" data-role="listview">
+	<% @books.each do |book| %>
 			<% if book.lending.present? %>
-			<a name="link_show_rented" href=<%= book_path(id: book.id, view: "m") %> class="ui-btn">
-			<li name="book_rented_out" class="ui-li ui-li-static ui-body-c book-list" data-icon="false">
-				<h3 class="ui-li-heading ui-icon-book book-title-icon"><%= book.title %></h3>
-				<p class="ui-li-desc ui-icon-pencil book-author-icon"><%= book.author_name %></p>
-				<p id="book_status_rented_out" class="ui-li-aside ui-li-desc"><%= t 'lending.status.rented_out' %></p>
-				<hr />
-				<p class="ui-li-desc ui-icon-user lending-user-icon"><%= book.lending.user_name %></p>
-				<p class="ui-li-desc ui-icon-check lending-date-icon"><%= book.lending.date %></p>
-				<p class="ui-li-desc ui-icon-clock lending-limit-icon"><%= book.lending.date + book.lending.period %></p>
+			<a page_num=<%= @books.current_page %> name="each_book_link" href=<%= book_path(id: book.id, view: "m") %> class="ui-btn">
+			<li book_id=<%= book.id %> lending_id=<%= book.lending.id %> name="book_rented_out" class="ui-li ui-li-static ui-body-c book-list" data-icon="false">
+				<h3 class="book-title ui-li-heading ui-icon-book book-title-icon"><%= book.title %></h3>
+				<p class="book-author ui-li-desc ui-icon-pencil book-author-icon"><%= book.author_name %></p>
+				<p id="book_status_rented_out" class="book-status ui-li-desc"><%= t 'lending.status.rented_out' %></p>
+				<p class="lending-info ui-li-desc ui-icon-user lending-user-icon"><%= book.lending.user_name %></p>
+				<p class="lending-info ui-li-desc ui-icon-clock lending-user-icon"><%= book.lending.date.to_s + " > " + (book.lending.date + book.lending.period).to_s %></p>
 			</li>
 			</a>
 			<% else %>
-			<a name="link_show_kept" href=<%= book_path(id: book.id, view: "m") %> class="ui-btn">
-			<li name="book_kept" class="ui-li ui-li-static ui-body-c book-list">
-				<h3 class="ui-li-heading ui-icon-book book-title-icon"><%= book.title %></h3>
-				<p class="ui-li-desc ui-icon-pencil book-author-icon"><%= book.author_name %></p>
-				<p id="book_status_kept" class="ui-li-aside ui-li-desc"><%= t 'lending.status.kept' %></p>
+			<a page_num=<%= @books.current_page %> name="each_book_link" href=<%= book_path(id: book.id, view: "m") %> class="ui-btn">
+			<li book_id=<%= book.id %> name="book_kept" class="ui-li ui-li-static ui-body-c book-list">
+				<h3 class="book-title ui-li-heading ui-icon-book book-title-icon"><%= book.title %></h3>
+				<p class="book-author ui-li-desc ui-icon-pencil book-author-icon"><%= book.author_name %></p>
+				<p id="book_status_kept" class="book-status ui-li-desc"><%= t 'lending.status.kept' %></p>
 			</li>
 			</a>
 			<% end %>
@@ -32,7 +42,20 @@
 	</ul>
 	</fieldset>
 	</div>
+
+	<div data-role="popup" id="end_read_dialog">
+		<div data-role="content">
+			<p><%= t 'message.read.end' %></p>
+			<button name="close_btn" class="close-btn"><%= t 'button.ok' %></button>
+		</div>
+	</div>
+
+	<div data-role="popup" id="fail_read_dialog">
+		<div data-role="content">
+			<p><%= t 'message.read.fail' %></p>
+			<button name="close_btn" class="close-btn"><%= t 'button.ok' %></button>
+		</div>
+	</div>
+
+	<div hidden=true id="hidden_info" search="<%= @search_string.nil? ? nil : true %>" next=<%= @books.next_page %>></div>
 </div>
-
-
-
