--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 	</script>
   <%= javascript_include_tag 'jquery-2.1.1.min' %>
   <%= javascript_include_tag 'jquery-ui/1.11.1/jquery-ui.min' %>
-  <%= javascript_include_tag 'application' %>
+  <%= javascript_include_tag 'public/application' %>
 	<%= render 'layouts/header' %>
 	<% flash.each do |name, msg| %>
 			<% status = name == "notice" ? "success" : "danger" %>
