--- a/app/views/books/show_m.html.erb
+++ b/app/views/books/show_m.html.erb
@@ -15,17 +15,17 @@
 			</div>
 		<% end %>
 	</div>
-	<dl>
-		<dt><%= t 'books.label.title' %></dt><dd><%= @book.title %></dd>
-		<dt><%= t 'books.label.author_name' %></dt><dd><%= @book.author_name %></dd>
+	<dl class="show-detail">
+		<dt class="show-detail"><%= t 'books.label.title' %></dt><dd class="show-detail"><%= @book.title %></dd>
+		<dt class="show-detail"><%= t 'books.label.author_name' %></dt><dd class="show-detail"><%= @book.author_name %></dd>
 		<% if @book.lending.present? %>
-		<dt><%= t 'lending.label.user_name' %></dt><dd><%= @book.lending.user_name %></dd>
-		<dt><%= t 'lending.label.date' %></dt><dd><%= @book.lending.date %></dd>
-		<dt><%= t 'lending.label.limit' %></dt><dd><%= @book.lending.date + @book.lending.period %></dd>
+		<dt class="show-detail"><%= t 'lending.label.user_name' %></dt><dd class="show-detail"><%= @book.lending.user_name %></dd>
+		<dt class="show-detail"><%= t 'lending.label.date' %></dt><dd class="show-detail"><%= @book.lending.date %></dd>
+		<dt class="show-detail"><%= t 'lending.label.limit' %></dt><dd class="show-detail"><%= @book.lending.date + @book.lending.period %></dd>
 		<% else %>
-		<dt><%= t 'lending.label.user_name' %></dt><dd></dd>
-		<dt><%= t 'lending.label.date' %></dt><dd></dd>
-		<dt><%= t 'lending.label.limit' %></dt><dd></dd>
+		<dt class="show-detail"><%= t 'lending.label.user_name' %></dt><dd class="show-detail"></dd>
+		<dt class="show-detail"><%= t 'lending.label.date' %></dt><dd class="show-detail"></dd>
+		<dt class="show-detail"><%= t 'lending.label.limit' %></dt><dd class="show-detail"></dd>
 		<% end %>
 	</dl>
 </div>
