--- a/app/assets/stylesheets/mobile/custom.css.scss
+++ b/app/assets/stylesheets/mobile/custom.css.scss
@@ -49,90 +49,52 @@
 	padding: 0px 10px 10px 20px !important;
 }
 
-.ui-icon-clock:after {
-	background-repeat: no-repeat;
-}
-
-.book-title-icon:after,
-.lending-user-icon:after,
-.lending-date-icon:after,
-.lending-limit-icon:after {
-	content: "";
-	width: 14px;
-	height: 14px;
-	border-radius: 5px;
-	background-color: #aaa;
-	background-position: center;
-	background-size: 10px 10px;
-	position: absolute;
-	display: inline-block;
-	float: left;
-	left: 2px;
-	margin: 1px 10px;
-}
-
-.book-author-icon:after {
-	content: "";
-	width: 14px;
-	height: 14px;
-	border-radius: 5px;
-	background-color: #aaa;
-	background-position: center;
-	background-size: 10px 10px;
-	position: absolute;
-	display: inline-block;
-	float: left;
-	left: 0px;
-	margin: 2px 65%;
-
-}
-
 /* typography */
 
 #page_title {
 	margin: -10px;
 }
 
-.book-title, .book-author {
+.book-title {
 	text-align: left;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
-	margin: 0 0 0 17px;
 	font-size: 90%;
-}
-
-.book-title {
-	width: 55%;
-	float: left;
-	margin-right: 10%;
+	margin: 0px;
 }
 
 .book-author {
-	width: 20%;
-	padding-left: 8px;
-}
-
-.book-status {
-	text-align: left;
-	margin-bottom: 3px;
-	font-size: 90%;
-}
-
-.lending-info {
-	text-align: left;
-	float: left;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
+	max-width: 50%;
+}
+
+.lending-user {
+	max-width: 20%;
+}
+
+.lending-user,
+.lending-limit {
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+
+.book-info {
+	font-size: 80%;
+	text-align: left;
 	display: inline-block;
-	width: 90%;
-	margin: 0 0 0 17px;
-	font-size: 70%;
+	float: left;
 }
 
 .confirm {
 	color: red;
+}
+
+.out-of-dateness {
+	text-shadow: 0 0 1px red;
 }
 
 h2 {
@@ -196,24 +158,55 @@ a {
 	text-decoration: none;
 }
 
+.book-link {
+	padding: 5px !important;
+}
+
 /* definition list */
 
-dl {
+dl.show-detail {
 	margin: 0 10px 0 10px;
 }
 
-dt {
+dt.show-detail,
+dt.delete_book_title,
+dt.delete_book_author,
+dt.edited_book_title,
+dt.edited_book_author {
 	font-weight: bold;
 	width: 100px;
 }
 
 
-dt, dd {
+dt.show-detail,
+dd.show-detail,
+dt.delete_book_title,
+dd.selected_book_author,
+dd.selected_book_title,
+dt.edited_book_title,
+dd.edited_book_title,
+dt.edited_book_author,
+dd.edited_book_author {
 	margin-bottom: 10px;
 	overflow: auto;
 	word-break: break-all;
 }
 
+dt.book-info {
+	float: left;
+	width: 16px;
+	height: 16px;
+	background-color: #ccc;
+	border-radius: 3px;
+}
+
+dl {
+	margin-top: 0px;
+}
+
+dd.book-info {
+	margin: 0 10px 0 2px;
+}
 
 /* button */
 
@@ -270,4 +263,17 @@ dt, dd {
 .search_result,
 .flash_notice {
 	color: darkgreen;
+}
+
+/* icon */
+
+
+.book-author-icon,
+.book-status-icon,
+.lending-user-icon,
+.lending-limit-icon {
+	display: inline-block;
+	float: left;
+	width: 12px;
+	padding: 2px 0 0 2px;
 }
